objects/DemoReport__c.object
<CustomObject>
    <fields>
        <fullName>Progress_month__c</fullName>
        <formula>((YEAR (DateFrom__c ) - YEAR(today())) * 12)
+ (month( DateFrom__c ) -month(today()))</formula>
        <label>経過月数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <formula>CASE(month(DateTo__c )
,1, &quot;4Q&quot;
,2, &quot;4Q&quot;
,3, &quot;4Q&quot;
,4, &quot;1Q&quot;
,5, &quot;1Q&quot;
,6, &quot;1Q&quot;
,7, &quot;2Q&quot;
,8, &quot;2Q&quot;
,9, &quot;2Q&quot;
,10, &quot;3Q&quot;
,11, &quot;3Q&quot;
,12, &quot;3Q&quot;
,&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReasonofWinLost__c</fullName>
        <inlineHelpText>ERPで登録されている勝敗因理由</inlineHelpText>
        <label>勝敗因理由</label>
        <picklist>
            <picklistValues>
                <fullName>アンタッチ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>価格</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>過去の実績・イメージ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>性能・仕様</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>人脈</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>サービス対応力</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>S_Model1__c</fullName>
        <formula>Model__r.S_Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S_Model1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Model2__c</fullName>
        <formula>Model2__r.S_Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S_Model2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Model3__c</fullName>
        <formula>Model3__r.S_Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S_Model3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SampleClassificationText__c</fullName>
        <inlineHelpText>100文字まで入力可能</inlineHelpText>
        <label>試料分類(Text)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SampleClassification__c</fullName>
        <label>試料分類</label>
        <picklist>
            <picklistValues>
                <fullName>金属・合金</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>地質・土壌・鉱物</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>ガラス・セラミックス・セメント</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>食品</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>高分子・樹脂</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>オイル・ガス</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>Fat/Food oil</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>メッキ・蒸着膜</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>生体試料</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>Papers</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>Pigment/Dye</fullName>
                <color>#641CCF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Electric and electronic component</fullName>
                <color>#F96FB7</color>
            </picklistValues>
            <picklistValues>
                <fullName>Catalyst/Battery</fullName>
                <color>#2F5D85</color>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical parts</fullName>
                <color>#AFCADF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Semiconductor Device</fullName>
                <color>#8F6429</color>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmetics</fullName>
                <color>#EFAE73</color>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmaceutical/Drugs</fullName>
                <color>#57F17C</color>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SampleName__c</fullName>
        <label>試料名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeriesMain__c</fullName>
        <label>系列1</label>
        <picklist>
            <picklistValues>
                <fullName>EM</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>XM</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>EQ</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>NM</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>ER</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>SM</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>IB</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>EB</fullName>
                <color>#641CCF</color>
            </picklistValues>
            <picklistValues>
                <fullName>SB</fullName>
                <color>#F96FB7</color>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
                <color>#2F5D85</color>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
                <color>#AFCADF</color>
            </picklistValues>
            <picklistValues>
                <fullName>TP</fullName>
                <color>#8F6429</color>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
                <color>#EFAE73</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SeriesSub2__c</fullName>
        <label>系列3</label>
        <picklist>
            <picklistValues>
                <fullName>EM</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>XM</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>EQ</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>NM</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>ER</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>SM</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>IB</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>EB</fullName>
                <color>#641CCF</color>
            </picklistValues>
            <picklistValues>
                <fullName>SB</fullName>
                <color>#F96FB7</color>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
                <color>#2F5D85</color>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
                <color>#AFCADF</color>
            </picklistValues>
            <picklistValues>
                <fullName>TP</fullName>
                <color>#8F6429</color>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
                <color>#EFAE73</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SeriesSub__c</fullName>
        <label>系列2</label>
        <picklist>
            <picklistValues>
                <fullName>EM</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>XM</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>EQ</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>NM</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>ER</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>SM</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>IB</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>EB</fullName>
                <color>#641CCF</color>
            </picklistValues>
            <picklistValues>
                <fullName>SB</fullName>
                <color>#F96FB7</color>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
                <color>#2F5D85</color>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
                <color>#AFCADF</color>
            </picklistValues>
            <picklistValues>
                <fullName>TP</fullName>
                <color>#8F6429</color>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
                <color>#EFAE73</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SeriesText__c</fullName>
        <label>系列(Text)</label>
        <picklist>
            <picklistValues>
                <fullName>EM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SpecimensNumber__c</fullName>
        <label>検体数</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Model_1_3__c</fullName>
        <formula>if(Model__r.Name = &quot;&quot;,&quot;&quot;,  Model__r.Name ) &amp;  if( Model2__r.Name = &quot;&quot;,&quot;&quot;, &quot;;&quot; &amp; Model2__r.Name) &amp;  if(Model3__r.Name = &quot;&quot;,&quot;&quot;, &quot;;&quot; &amp; Model3__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Model(1-3)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeofDemo__c</fullName>
        <label>目的</label>
        <picklist>
            <picklistValues>
                <fullName>デモ（自社）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>デモ（依頼先）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>リモートデモ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>依頼測定</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他（上記以外）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.商談／技術打合せ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.技術打合せ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-1.デモ（自社）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-4.依頼測定</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.講習</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他（4-1～4-4以外）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>予算申請のためのﾃﾞｰﾀ収集</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>２．商談／技術打ち合せ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>３．立合検査</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TypeofIndustry__c</fullName>
        <label>業種</label>
        <picklist>
            <picklistValues>
                <fullName>大学(教育機関)</fullName>
                <color>#006600</color>
            </picklistValues>
            <picklistValues>
                <fullName>輸送機器(航空/自動車/船舶)</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>農業・水産・食品</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>化学(有機、無機、高分子、繊維、紙)</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>窯業(セラミックス、ガラス、セメント)</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>受託分析・研究機関</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>電子・電機・半導体</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>エネルギー(オイル、ガス、石油、その他)</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>科学捜査・鑑定</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>官庁</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>材料・原料・鉱業</fullName>
                <color>#641CCF</color>
            </picklistValues>
            <picklistValues>
                <fullName>医学・医療(製薬会社、病院、バイオテクノジー、医療機器)</fullName>
                <color>#F96FB7</color>
            </picklistValues>
            <picklistValues>
                <fullName>表面処理</fullName>
                <color>#2F5D85</color>
            </picklistValues>
            <picklistValues>
                <fullName>機械</fullName>
                <color>#AFCADF</color>
            </picklistValues>
            <picklistValues>
                <fullName>建設</fullName>
                <color>#8F6429</color>
            </picklistValues>
            <picklistValues>
                <fullName>サービス・情報・通信</fullName>
                <color>#EFAE73</color>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
                <color>#57F17C</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WinLost__c</fullName>
        <label>勝敗</label>
        <picklist>
            <picklistValues>
                <fullName>Win</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disappeared</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>デモレポート</label>
    <listViews>
        <fullName>Product_Group_AP</fullName>
        <booleanFilter>1 or 2 or 3</booleanFilter>
        <columns>NAME</columns>
        <columns>TypeofDemo__c</columns>
        <columns>Country__c</columns>
        <columns>SeriesMain__c</columns>
        <columns>SeriesSub__c</columns>
        <columns>SeriesSub2__c</columns>
        <columns>Country_Customer__c</columns>
        <columns>AccountName__c</columns>
        <columns>Model__c</columns>
        <columns>Attachment1__c</columns>
        <columns>SampleName__c</columns>
        <columns>DateFrom__c</columns>
        <columns>DateTo__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SeriesMain__c</field>
            <operation>equals</operation>
            <value>AP</value>
        </filters>
        <filters>
            <field>SeriesSub__c</field>
            <operation>equals</operation>
            <value>AP</value>
        </filters>
        <filters>
            <field>SeriesSub2__c</field>
            <operation>equals</operation>
            <value>AP</value>
        </filters>
        <label>Product Group=AP</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>Product_Group_EM</fullName>
        <booleanFilter>1 or 2 or 3</booleanFilter>
        <columns>NAME</columns>
        <columns>TypeofDemo__c</columns>
        <columns>Country__c</columns>
        <columns>SeriesMain__c</columns>
        <columns>SeriesSub__c</columns>
        <columns>SeriesSub2__c</columns>
        <columns>Attachment1__c</columns>
        <columns>Country_Customer__c</columns>
        <columns>AccountName__c</columns>
        <columns>Model__c</columns>
        <columns>SampleName__c</columns>
        <columns>DateFrom__c</columns>
        <columns>DateTo__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SeriesMain__c</field>
            <operation>equals</operation>
            <value>EM</value>
        </filters>
        <filters>
            <field>SeriesSub__c</field>
            <operation>equals</operation>
            <value>EM</value>
        </filters>
        <filters>
            <field>SeriesSub2__c</field>
            <operation>equals</operation>
            <value>EM</value>
        </filters>
        <label>Product Group=EM</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>Product_Group_EQ</fullName>
        <booleanFilter>1 or 2 or 3</booleanFilter>
        <columns>NAME</columns>
        <columns>TypeofDemo__c</columns>
        <columns>Country__c</columns>
        <columns>SeriesMain__c</columns>
        <columns>SeriesSub__c</columns>
        <columns>SeriesSub2__c</columns>
        <columns>Country_Customer__c</columns>
        <columns>AccountName__c</columns>
        <columns>Model__c</columns>
        <columns>Attachment1__c</columns>
        <columns>SampleName__c</columns>
        <columns>DateFrom__c</columns>
        <columns>DateTo__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SeriesMain__c</field>
            <operation>equals</operation>
            <value>EQ</value>
        </filters>
        <filters>
            <field>SeriesSub__c</field>
            <operation>equals</operation>
            <value>EQ</value>
        </filters>
        <filters>
            <field>SeriesSub2__c</field>
            <operation>equals</operation>
            <value>EQ</value>
        </filters>
        <label>Product Group=EQ</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>Product_Group_IB</fullName>
        <booleanFilter>1 or 2 or 3</booleanFilter>
        <columns>NAME</columns>
        <columns>TypeofDemo__c</columns>
        <columns>Country__c</columns>
        <columns>SeriesMain__c</columns>
        <columns>SeriesSub__c</columns>
        <columns>SeriesSub2__c</columns>
        <columns>Country_Customer__c</columns>
        <columns>AccountName__c</columns>
        <columns>Model__c</columns>
        <columns>Attachment1__c</columns>
        <columns>SampleName__c</columns>
        <columns>DateFrom__c</columns>
        <columns>DateTo__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SeriesMain__c</field>
            <operation>equals</operation>
            <value>IB</value>
        </filters>
        <filters>
            <field>SeriesSub__c</field>
            <operation>equals</operation>
            <value>IB</value>
        </filters>
        <filters>
            <field>SeriesSub2__c</field>
            <operation>equals</operation>
            <value>IB</value>
        </filters>
        <label>Product Group=IB</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>Product_Group_MP</fullName>
        <booleanFilter>1 or 2 or 3</booleanFilter>
        <columns>NAME</columns>
        <columns>TypeofDemo__c</columns>
        <columns>Country__c</columns>
        <columns>SeriesMain__c</columns>
        <columns>SeriesSub__c</columns>
        <columns>SeriesSub2__c</columns>
        <columns>Country_Customer__c</columns>
        <columns>AccountName__c</columns>
        <columns>Model__c</columns>
        <columns>Attachment1__c</columns>
        <columns>SampleName__c</columns>
        <columns>DateFrom__c</columns>
        <columns>DateTo__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SeriesMain__c</field>
            <operation>equals</operation>
            <value>MP</value>
        </filters>
        <filters>
            <field>SeriesSub__c</field>
            <operation>equals</operation>
            <value>MP</value>
        </filters>
        <filters>
            <field>SeriesSub2__c</field>
            <operation>equals</operation>
            <value>MP</value>
        </filters>
        <label>Product Group=MP</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>Product_Group_MS</fullName>
        <booleanFilter>1 or 2 or 3</booleanFilter>
        <columns>NAME</columns>
        <columns>TypeofDemo__c</columns>
        <columns>Country__c</columns>
        <columns>SeriesMain__c</columns>
        <columns>SeriesSub__c</columns>
        <columns>SeriesSub2__c</columns>
        <columns>Country_Customer__c</columns>
        <columns>AccountName__c</columns>
        <columns>Model__c</columns>
        <columns>Attachment1__c</columns>
        <columns>SampleName__c</columns>
        <columns>DateFrom__c</columns>
        <columns>DateTo__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SeriesMain__c</field>
            <operation>equals</operation>
            <value>MS</value>
        </filters>
        <filters>
            <field>SeriesSub__c</field>
            <operation>equals</operation>
            <value>MS</value>
        </filters>
        <filters>
            <field>SeriesSub2__c</field>
            <operation>equals</operation>
            <value>MS</value>
        </filters>
        <label>Product Group=MS</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>Product_Group_NM</fullName>
        <booleanFilter>1 or 2 or 3</booleanFilter>
        <columns>NAME</columns>
        <columns>TypeofDemo__c</columns>
        <columns>Country__c</columns>
        <columns>SeriesMain__c</columns>
        <columns>SeriesSub__c</columns>
        <columns>SeriesSub2__c</columns>
        <columns>Country_Customer__c</columns>
        <columns>AccountName__c</columns>
        <columns>Model__c</columns>
        <columns>Attachment1__c</columns>
        <columns>SampleName__c</columns>
        <columns>DateFrom__c</columns>
        <columns>DateTo__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SeriesMain__c</field>
            <operation>equals</operation>
            <value>NM</value>
        </filters>
        <filters>
            <field>SeriesSub__c</field>
            <operation>equals</operation>
            <value>NM</value>
        </filters>
        <filters>
            <field>SeriesSub2__c</field>
            <operation>equals</operation>
            <value>NM</value>
        </filters>
        <label>Product Group=NM</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>Product_Group_SM</fullName>
        <booleanFilter>1 or 2 or 3</booleanFilter>
        <columns>NAME</columns>
        <columns>TypeofDemo__c</columns>
        <columns>Country__c</columns>
        <columns>SeriesMain__c</columns>
        <columns>SeriesSub__c</columns>
        <columns>SeriesSub2__c</columns>
        <columns>Country_Customer__c</columns>
        <columns>AccountName__c</columns>
        <columns>Model__c</columns>
        <columns>Attachment1__c</columns>
        <columns>SampleName__c</columns>
        <columns>DateFrom__c</columns>
        <columns>DateTo__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SeriesMain__c</field>
            <operation>equals</operation>
            <value>SM</value>
        </filters>
        <filters>
            <field>SeriesSub__c</field>
            <operation>equals</operation>
            <value>SM</value>
        </filters>
        <filters>
            <field>SeriesSub2__c</field>
            <operation>equals</operation>
            <value>SM</value>
        </filters>
        <label>Product Group=SM</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>Product_Group_XM</fullName>
        <booleanFilter>1 or 2 or 3</booleanFilter>
        <columns>NAME</columns>
        <columns>TypeofDemo__c</columns>
        <columns>Country__c</columns>
        <columns>SeriesMain__c</columns>
        <columns>SeriesSub__c</columns>
        <columns>SeriesSub2__c</columns>
        <columns>Country_Customer__c</columns>
        <columns>AccountName__c</columns>
        <columns>Model__c</columns>
        <columns>Attachment1__c</columns>
        <columns>SampleName__c</columns>
        <columns>DateFrom__c</columns>
        <columns>DateTo__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SeriesMain__c</field>
            <operation>equals</operation>
            <value>XM</value>
        </filters>
        <filters>
            <field>SeriesSub__c</field>
            <operation>equals</operation>
            <value>XM</value>
        </filters>
        <filters>
            <field>SeriesSub2__c</field>
            <operation>equals</operation>
            <value>XM</value>
        </filters>
        <label>Product Group=XM</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>Select_All</fullName>
        <columns>NAME</columns>
        <columns>TypeofIndustry__c</columns>
        <columns>SampleClassification__c</columns>
        <columns>TypeofDemo__c</columns>
        <columns>Country__c</columns>
        <columns>Country_Customer__c</columns>
        <columns>AccountName__c</columns>
        <columns>Attachment1__c</columns>
        <columns>SeriesMain__c</columns>
        <columns>Model__c</columns>
        <columns>SeriesSub__c</columns>
        <columns>Model2__c</columns>
        <columns>SeriesSub2__c</columns>
        <columns>Model3__c</columns>
        <columns>SampleName__c</columns>
        <filterScope>Everything</filterScope>
        <label>_Select All</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>Select_Japan</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>ManagementNo__c</columns>
        <columns>SeriesMain__c</columns>
        <columns>Model__c</columns>
        <columns>TypeofDemo__c</columns>
        <columns>Country__c</columns>
        <columns>Country_Customer__c</columns>
        <columns>BranchRegion__c</columns>
        <columns>Attachment1__c</columns>
        <columns>AccountName__c</columns>
        <columns>TypeofIndustry__c</columns>
        <columns>DateFrom__c</columns>
        <columns>AccountFullName__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>contains</operation>
            <value>Japan</value>
        </filters>
        <label>_[A.yam] Country=Japan</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{00000}</displayFormat>
        <label>Demo Report No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>